# LearnOpenCV

./: .gitignore  README.md
Codes/: .clang-tidy  .dir-locals.el  CMakeLists.txt  CMakePresets.json  Makefile  compile_commands.json  generate_test_rules.sh
Codes/.marscode/: deviceInfo.json
Codes/assets/: generate-image.py
Codes/config/: googletest.cmake  main.cmake  opencv.cmake
Codes/config/linux/: linux.cmake
Codes/config/windows/: windows.cmake
Codes/include/: basic_operation.h  ch04.h  filter.h  pch.h  tester.h
Codes/makes/: LearnOpenCV_Test.mk  LearnOpenCV_Test.mk.bak  MyOpenCVProject.mk
Codes/src/: ch04.cc  main.cpp
Codes/tests/: AppendX_Qt_Support.cc  CH1_basic_operation.cc  CH2_basic_mat.cc  CH3_histrogram.cc  CH4_histrogram.cc  CH5_convolution.cc  CH6_binary_image.cc  CH7_binary_analysis.cc  CH8_morphology.cc  basic_mat.cc  basic_operation.cc  binary_test.cc  connective_label.cc  convolution.cc  filter_test.cc  find_contour_test.cc  gradient_test.cc  histogram.cc  main.cpp  margin_detect_test.cc  noise_image_test.cc  tester.cc
Notes/: .markdown-preview.html  Install.md  Makefile  Overview.md  color-space.md  gradient-clipping.tex  histogram-backprojection.tex  histogram-comparison.md  histogram-comparison.tex  histogram-equalize.md  histogram.md  image-blurring-techniques.tex  mean-blurring.tex  opencv-gradient-clipping.tex
